:bug: fix: tweak colors and the overlapping github ribbon.

--- a/site/assets/styles.css
+++ b/site/assets/styles.css
@@ -475,10 +475,7 @@ iframe[scrolling='no'] {
   top: 0;
   padding: 2px 5px;
   color: white;
-  /* slategray matches the source code comments in the prism-okaida
-     theme. We do this because language labels provide non-primary
-     contextual information, like code comments. */
-  background: slategray;
+  background: #49525a;
   position: absolute;
   font-size: 10px;
   text-transform: uppercase;
@@ -489,4 +486,8 @@ code {
 code a {/* causes autolinker links to inherit their respective syntax-
        highlighted colors instead of being default-link-blue. */
   color: inherit;
+}
+.ribbon {
+  max-width: 24vw;
+  max-height: 138px;
 }
